# freertos_inside_linux_using_cmake

./: LICENSE  README.md
example01_cpp_freertos/: CMakeLists.txt  main.cpp
example02_c_freertos/: CMakeLists.txt  main.c
example02_c_freertos/src/include/: queue.h
example03_cpp_freertos_queue/: CMakeLists.txt  main.cpp
example03_cpp_freertos_queue/include/: main.h
example04_cpp_freertos_mutex/: main.cpp
example05_cpp_freertos_pass_int_argument_to_task/: main.cpp
example06_cpp_freertos_pass_a_structure_to_task_argument/: main.cpp
